--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-ng-annotate": "^1.0.1",
     "load-grunt-tasks": "^3.4.0"
   }
 }
